# sira

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  sandbox.sh
scripts/: README.md  add_doc_index_adapter.py  enrich_query_and_retrieve.py  eval_bm25.py  failure_report.py  greprag_retrieve.py  iterative_retrieve.py  llm_reranking.py  prepare_mteb_data.py  run_pipeline.py  serve_llm.py
scripts/configs/: add_doc_index_adapter.yaml  enrich_query_and_retrieve.yaml  eval_bm25.yaml  failure_report.yaml  global.yaml  greprag_retrieve.yaml  iterative_retrieve.yaml  llm_reranking.yaml  prepare_mteb_data.yaml  run_pipeline.yaml
scripts/configs/bm25/: default.yaml
scripts/configs/data/: arguana.yaml  climate-fever.yaml  cqadupstack.yaml  fever.yaml  fiqa.yaml  hotpotqa.yaml  nq-extra.yaml  nq.yaml  quora.yaml  scidocs.yaml  scifact.yaml
scripts/configs/enrich/: arguana.yaml  default.yaml  fever.yaml  fiqa.yaml  hotpotqa.yaml  nq.yaml  quora.yaml  scidocs.yaml
scripts/configs/enrich/prompts/: doc_argument_v01.txt  doc_citation_v01.txt  doc_claim_v01.txt  doc_claim_v02.txt  doc_dupq_kw_v01.txt  doc_dupq_v01.txt  doc_dupq_v02.txt  doc_finance_v01.txt  doc_v06.txt  doc_v07.txt  query_argument_v01.txt  query_citation_v01.txt  query_claim_v01.txt  query_claim_v02.txt  query_dupq_v01.txt  query_dupq_v02.txt  query_finance_v01.txt  query_multihop_v01.txt  query_v06.txt  query_v07.txt
scripts/configs/greprag/: default.yaml
scripts/configs/greprag/prompts/: multi_query_v01.txt
scripts/configs/iterative/: default.yaml
scripts/configs/iterative/prompts/: react_v01.txt
scripts/configs/rerank/: arguana.yaml  climate-fever.yaml  cqadupstack.yaml  default.yaml  fever.yaml  fiqa.yaml  hotpotqa.yaml  nq.yaml  quora.yaml  scidocs.yaml
scripts/configs/rerank/prompts/: duplicate_question_v01.txt  duplicate_question_v02.txt  duplicate_question_v03.txt  duplicate_question_v04.txt  duplicate_question_v05.txt  relevance_v01.txt  relevance_v02.txt  relevance_v03.txt  relevance_v04.txt  rerank_argument_v01.txt  rerank_citation_v01.txt  rerank_claim_v01.txt  rerank_claim_v02.txt  rerank_claim_v03.txt  rerank_claim_v04.txt  rerank_finance_v01.txt  rerank_multihop_v01.txt
scripts/configs/sglang/: qwen3.6-35b-a3b-fp8:h100.yaml  qwen3.6-35b-a3b-fp8_h100.yaml
src/sira/: __init__.py  grep.py  llm.py
src/sira/bm25x/: Cargo.toml  NOTICE  README.md  build.rs
src/sira/bm25x/python/: Cargo.toml  bm25x.pyi  pyproject.toml
src/sira/bm25x/python/src/: lib.rs
src/sira/bm25x/python/tests/: test_bm25_ngram.py  test_bm25_ngram_stress.py  test_ngram_index.py  test_subset.py
src/sira/bm25x/src/: cuda.rs  index.rs  lib.rs  multi_gpu.rs  ngram.rs  ngram_index.rs  scoring.rs  storage.rs  tfidf.rs  tokenizer.rs
src/sira/bm25x/src/index/: ngram_side.rs
src/sira/bm25x/src/query/: analyze.rs  mod.rs  score.rs
src/sira/schema/: __init__.py  mteb.py  sglang.py
